tests/reference/asr-test_list3-5f4d2a8.stderr
semantic error: For now pop() takes no arguments
 --> tests/errors/test_list3.py:5:9
  |
5 |     x = a.pop(2.2)
  |         ^^^^^^^^^^ 
